--- a/index.html
+++ b/index.html
@@ -22,9 +22,15 @@
 <body>
 
     <!-- Background Elements -->
+    <!-- Background Elements -->
+    <div class="bg-shape bg-shape-1"></div>
+    <div class="bg-shape bg-shape-2"></div>
+    <div class="bg-shape bg-shape-3"></div>
+    <div class="bg-shape bg-shape-4"></div>
     <div class="bg-bean bg-bean-1"></div>
     <div class="bg-bean bg-bean-2"></div>
-    <div class="bg-bean bg-bean-3"></div>
+    <div class="bg-shape-square bg-square-1"></div>
+    <div class="bg-shape-square bg-square-2"></div>
 
     <nav>
         <ul class="nav-links">
@@ -43,9 +49,6 @@
                 <h1 id="profile-name" data-aos="fade-down" data-aos-delay="200"></h1>
                 <h2 id="profile-role" data-aos="fade-up" data-aos-delay="400"></h2>
                 <p id="profile-bio" data-aos="fade-up" data-aos-delay="600"></p>
-                <div class="social-links" id="social-links-container" data-aos="fade-up" data-aos-delay="800">
-                    <!-- Social links injected here -->
-                </div>
                 <div class="buttons-container" data-aos="zoom-in" data-aos-delay="600">
                     <a href="#projects" class="btn-primary">View My Work</a>
                     <a href="#" id="btn-cv" class="btn-secondary">Download CV <i class="fa-solid fa-download"></i></a>
