--- a/index.html
+++ b/index.html
@@ -57,6 +57,16 @@
         </div>
     </header>
 
+    <section id="skills" class="skills-section">
+        <div class="section-title" data-aos="fade-up">
+            <h2>Tools & Languages</h2>
+            <div class="underline"></div>
+        </div>
+        <div class="skills-container" id="skills-container" data-aos="fade-up" data-aos-delay="200">
+            <!-- Skills injected here -->
+        </div>
+    </section>
+
     <section id="projects">
         <div class="section-title" data-aos="fade-right">
             <h2>Select Projects</h2>
